--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body{
     gap: 2px;
     margin: 2px;
 }
-.btn-number, .btn-special ,.btn-as ,.btn-clear ,.btn-del {
+.container button {
     width: 100%;
     height: 65px;
     border-radius: 5px;
